--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         
         <a href="#">Contact</a>
     </div>
-    <div class="content">
-        <h1>Hello User</h1>
+    <div class="contentt">
+        <h1 id = "content">Hello, Awesome Human! 👋</h1>
+        <p id="content-sub">Welcome to your creative space. Let’s make something amazing today!</p>
     </div>
     
 
