--- a/dynamic-template.html
+++ b/dynamic-template.html
@@ -98,15 +98,8 @@
     }
 
     // Side Drawer Toggle (if not already in drawer.js)
-    function toggleDrawer() {
-      const drawer = document.getElementById("drawer");
-      drawer.style.display = drawer.style.display === "block" ? "none" : "block";
-    }
-
-    function toggleSubMenu(id) {
-      const submenu = document.getElementById(id);
-      submenu.style.display = submenu.style.display === "block" ? "none" : "block";
-    }
+    
   </script>
+  <script src="drawer.js"></script>
 </body>
 </html>
