--- a/table.html
+++ b/table.html
@@ -37,6 +37,7 @@
     </div>
     <div class="table-container">
         <h2>Campaign Data Table</h2>
+        
         <table id="data-table">
             <thead>
                 <tr>
@@ -51,11 +52,11 @@
             </tbody>
         </table>
         <div class="pagination">
-            <button onclick="prevPage()">Prev</button>
+            <button onclick="prevPage()"> < </button>
             <span id="page-info"></span>
-            <button onclick="nextPage()">Next</button>
+            <button onclick="nextPage()"> > </button>
         </div>
-        <button onclick="exportToCSV()">Export to CSV</button>
+        <button id="exportbtn" onclick="exportToCSV()">Export to CSV</button>
     </div>
     
     <script src="table.js"></script>
